@@ -30,11 +30,10 @@ if ($which == 1){
     my $pi = $mod->new(setup => 'wpi');
     my $p = $pi->pin(29);
 
-    $p->interrupt_set(EDGE_FALLING, 'handler');
-
     $p->mode(INPUT);
     $p->pull(PUD_UP);
 
+    $p->interrupt_set(EDGE_FALLING, 'handler');
 
     for (1..5){
         sleep 1;
