@@ -2,6 +2,10 @@ Revision history for Perl extension RPi::WiringPi.
 
 0.99_06 UNREL
         - POD cleanup
+        - cleanup() added, puts each registered pin in INPUT mode, and disables
+          PUD if set
+        - re-added register_pin(), we now keep track of objects, as well as
+          GPIO numbers for cleanup
 
 0.99_05 2016-08-18
         - added Util::_sys_mode() to determine if we need wrappers for certain
